small css fixes to opacity and alignment

--- a/app/assets/stylesheets/pages/_user-show.scss
+++ b/app/assets/stylesheets/pages/_user-show.scss
@@ -47,6 +47,7 @@ ul {
   margin-bottom: 30px;
   a:hover {
     text-decoration: none;
+    font-weight: bolder;
   }
 }
 
